--- a/Survey Form/survey.html
+++ b/Survey Form/survey.html
@@ -7,16 +7,46 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Survey Form</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+        <main>
+            <h1 id="title">World's Best Cuisine</h1>
+            <p id="description">Submit this form to tell me your food preferences</p>
+            <form id="survey-form">
+                <div class="form-group">
+                    <label id="name-label" for="Name">Name</label>
+                    <input
+                        type="text"
+                        name="name"
+                        placeholder="Enter your name"
+                        required
+                    />
+                <div class="form-group">
+                    <label id="email-label" for="email">Email</label>
+                    <input
+                        type="email"
+                        name="email"
+                        placeholder="Enter your email"
+                    .>
+                <div class="form-group">
+                    <label id="age-label" for="age">Age <span style="font-size: 10px;">(optional)</span></label>
+                    <input
+                        type="number"
+                        name="age"
+                        min="10"
+                        max="100"
+                        placeholder="Age"
+                    />
+                </div>
+                </div>
+                </div>
+            </form>
+        </main>
     </body>
 </html>
+
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
